# sherlock

./: .gitignore  Cargo.toml  README.md
src/: archive.rs  cli.rs  config.rs  dashboard.rs  event.rs  main.rs  parser.rs  proxy.rs
