[package]
name = "sherlock"
version = "0.1.0"
edition = "2021"
description = "LLM traffic inspector and token usage tracker"
license = "MIT"
authors = ["Sherlock Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros", "signal", "time", "fs", "process"] }

# HTTP server (proxy)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# HTTP client (upstream)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Token counting
tiktoken-rs = "=0.9.1"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
bytes = "1"

[profile.dev.package."*"]
opt-level = 2  # Optimize dependencies in dev builds

[profile.release]
lto = true
codegen-units = 1
strip = true
